--- a/app/src/main/res/layout/activity_scan_chengwei.xml
+++ b/app/src/main/res/layout/activity_scan_chengwei.xml
@@ -176,6 +176,7 @@
     </LinearLayout>
 
     <ListView
+        android:visibility="gone"
         android:id="@+id/listView_epc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -185,8 +186,8 @@
         android:id="@+id/startBtn"
         style="@style/next_button"
         android:layout_gravity="bottom"
-        android:layout_marginTop="10dp"
-        android:text="开始识别" />
+        android:layout_marginTop="20dp"
+        android:text="开始盘存" />
 
     <Button
         android:id="@+id/saveBtn"
@@ -194,6 +195,6 @@
         android:layout_gravity="bottom"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:text="保存" />
+        android:text="保  存" />
 
 </LinearLayout>
