--- a/app/src/main/res/layout/activity_scan_chengwei.xml
+++ b/app/src/main/res/layout/activity_scan_chengwei.xml
@@ -44,8 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:padding="5dp"
             android:layout_marginTop="20dp"
+            android:padding="5dp"
             android:text="@string/all_epc_sum"
             android:textColor="@color/color_gray_333333"
             android:textSize="18sp" />
@@ -65,9 +65,9 @@
 
         <LinearLayout
             android:id="@+id/checkId"
-            android:padding="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -89,9 +89,9 @@
 
         <LinearLayout
             android:id="@+id/shop"
-            android:padding="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -112,9 +112,9 @@
         <View style="@style/line" />
 
         <LinearLayout
-            android:padding="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -129,6 +129,7 @@
                 android:id="@+id/storeName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:text="柜台1" />
         </LinearLayout>
 
@@ -136,10 +137,10 @@
 
         <RelativeLayout
             android:id="@+id/distanceRly"
-            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="20dp"
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/tv"
@@ -151,36 +152,45 @@
                 android:textColor="@color/color_gray_333333"
                 android:textSize="15sp" />
 
-           <com.jiafeng.codegun.customzie.seekbar.BubbleSeekBar
-               android:id="@+id/seekbar"
-               android:layout_width="200dp"
-               android:layout_height="40dp"
-               android:layout_centerVertical="true"
-               android:layout_toEndOf="@+id/tv"
-               app:bsb_second_track_color="@color/text_color"
-               app:bsb_track_color="@color/ededed"
-               app:bsb_max="30"
-               app:bsb_min="5.0"
-               app:bsb_progress="30.0" />
+            <com.jiafeng.codegun.customzie.seekbar.BubbleSeekBar
+                android:id="@+id/seekbar"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/tv"
+                app:bsb_max="30"
+                app:bsb_min="5.0"
+                app:bsb_progress="30.0"
+                app:bsb_second_track_color="@color/text_color"
+                app:bsb_track_color="@color/ededed" />
 
             <TextView
                 android:id="@+id/nameTv"
-                android:textSize="15sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="20dp"
-                android:text="30" />
+                android:layout_marginEnd="28dp"
+                android:text="30"
+                android:textSize="15sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="5dp"
+                android:text="cm"
+                android:textSize="15sp" />
         </RelativeLayout>
     </LinearLayout>
 
     <ListView
-        android:visibility="gone"
         android:id="@+id/listView_epc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/startBtn"
