上线前准备

--- a/app/src/main/res/layout/activity_new_check.xml
+++ b/app/src/main/res/layout/activity_new_check.xml
@@ -36,7 +36,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
@@ -46,6 +46,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
+                android:visibility="gone"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:gravity="center_vertical"
@@ -69,7 +70,9 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
-            <View style="@style/line" />
+            <View
+                android:visibility="gone"
+                style="@style/line" />
 
             <LinearLayout
                 android:layout_width="match_parent"
