--- a/app/src/main/res/layout/popupwindows_multiselect.xml
+++ b/app/src/main/res/layout/popupwindows_multiselect.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentEnd="true">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/linearLayout_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="7dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="7dp"
         android:background="@drawable/btn_background"
         android:minWidth="180dp"
         android:orientation="vertical">
