--- a/app/src/main/res/layout/activity_check_list.xml
+++ b/app/src/main/res/layout/activity_check_list.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/allbg"
-    android:orientation="vertical"
-    tools:context="com.jiafeng.codegun.view.MainActivity">
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
